fixed bug appointments/events displayed on top of other windows altered z-index from 10 to 1

--- a/src/main.scss
+++ b/src/main.scss
@@ -27,7 +27,7 @@
                 padding: 0px;
                 font-size: 8pt;
                 overflow: hidden;  
-                z-index: 10;
+                z-index: 1;
 
                 .calendar-event-text {
                     padding: 0.5rem;
